Changed Blogs to Blog or Post all over the place

--- a/themes/editor/layouts/_default/list.html
+++ b/themes/editor/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <!-- checking blog -->
-{{ if or (eq .Section "post") (eq .Section "posts") (eq .Section "blog") (eq .Section "blogs") (eq .Section "news") }}
+{{ if or (eq .Section "post") (eq .Section "posts") (eq .Section "blog") (eq .Section "blog") (eq .Section "news") }}
 {{ partial "page-header.html" . }}
 
 <div class="col-12">
