removed contact info

--- a/themes/editor/layouts/_default/contact.html
+++ b/themes/editor/layouts/_default/contact.html
@@ -9,9 +9,9 @@
         <div class="content mb-5">
           {{.Content | markdownify}}
         </div>
-        <h4 class="mb-3"><a class="text-underline text-primary" href="mailto:{{site.Params.email}}">{{site.Params.email}}</a></h4>
+        <!--<h4 class="mb-3"><a class="text-underline text-primary" href="mailto:{{site.Params.email}}">{{site.Params.email}}</a></h4>
         <p class="mb-2">{{site.Params.address}}</p>
-        <p class="mb-2"><a href="tel:{{site.Params.mobile}}">{{site.Params.mobile}}</a></p>
+        <p class="mb-2"><a href="tel:{{site.Params.mobile}}">{{site.Params.mobile}}</a></p>-->
       </div>
     </div>
     <div class="col-lg-6 mt-5 mt-lg-0">
