--- a/themes/editor/layouts/partials/head.html
+++ b/themes/editor/layouts/partials/head.html
@@ -7,7 +7,7 @@
 {{ with site.Params.author }}
 <meta name="author" content="{{ . }}">{{ end }}
 
-<meta name="theme-name" content="editor-hugo" />
+<meta name="theme-name" content="{{ . }}" />
 
 <!--Favicon-->
 <link rel="shortcut icon" href="{{ site.Params.favicon | absURL }}" type="image/x-icon">
