--- a/themes/editor/layouts/partials/header.html
+++ b/themes/editor/layouts/partials/header.html
@@ -2,7 +2,7 @@
 
   <div class="is-top">
     <div>
-      <!-- Language List -->
+      <!-- Language List 
       {{ if .IsTranslated }}
       <span class="d-inline-block d-md-none mr-1"><select style="cursor:pointer;background:transparent" class="m-2 border-0 text-uppercase" id="select-language" onchange="location = this.value;">
         {{ $siteLanguages := site.Languages}}
@@ -22,7 +22,7 @@
         {{ end }}
         {{ end }}
       </select></span>
-      {{ end }}
+      {{ end }}-->
 
       {{ if site.Params.search }}
       <button class="search-toggle d-inline-block d-md-none" data-toggle="search">
@@ -65,11 +65,12 @@
       </li>
       {{ end }}
       <li>
-        <a href="mailto:{{ site.Params.email }}">
+        <!--<a href="mailto:{{ site.Params.email }}">-->
+        <a href="{{ site.BaseURL | relLangURL}}contact/">
           <svg width="1.15em" height="1.15em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/></svg>
         </a>
       </li>
-      <!-- Language List -->
+      <!-- Language List 
       {{ if .IsTranslated }}
       <li class="mt-3 pt-2"><select style="cursor:pointer" class="m-2 border-0 text-uppercase" id="select-language" onchange="location = this.value;">
         {{ $siteLanguages := site.Languages}}
@@ -89,7 +90,7 @@
         {{ end }}
         {{ end }}
       </select></li>
-      {{ end }}
+      {{ end }}-->
     </ul>
   </div>
 </header>
