--- a/themes/editor/layouts/partials/head.html
+++ b/themes/editor/layouts/partials/head.html
@@ -8,6 +8,7 @@
 <meta name="author" content="{{ . }}">{{ end }}
 
 <meta name="theme-name" content="{{ . }}" />
+<meta name="ahrefs-site-verification" content="338ed8865fe20887a01af6e6902b0664cef37960f974666897240ba037fca636">
 
 <!--Favicon-->
 <link rel="shortcut icon" href="{{ site.Params.favicon | absURL }}" type="image/x-icon">
